Development moved from arp-das to monarch 2018-12-16
Added automake/autoconf stuff 2007-04-25