@@ -1,5 +1,5 @@
 cmdgen package for generating command parsers for the
-Link Engineering Data Acquisition System.
+Monarch Data Acquisition Architecture.
 
 Documentation for this tool can be found at:
 
