@@ -13,6 +13,8 @@
 
 <unsort>
 <blank>
+cmdgen V2.1 March 25, 2021
+<blank>
 Input Syntax Notes:
   Variables can be specified using the following % escapes:
 <blank>
