@@ -109,6 +109,18 @@
     yylval.nt_val = non_terminal(yytext+1);
     return(TK_NON_TERMINAL);
   }
+%INTERFACE(Tx) {
+    yylval.str_val = "";
+    return( TK_INTERFACE_TX );
+  }
+%INTERFACE(Flight) {
+    yylval.str_val = "";
+    return( TK_INTERFACE );
+  }
+%INTERFACE(Coord) {
+    yylval.str_val = "";
+    return( TK_INTERFACE_COORD );
+  }
 %INTERFACE {
     yylval.str_val = "";
     return( TK_INTERFACE );
